# pinxerit

./: Cargo.toml
src/: canvas.rs  main.rs  shader.wgsl  tessallate.rs  tessellate.rs  texture.rs  wgpu_winit.rs
src/shaders/: tessellate_shader.wgsl  texture_shader.wgsl
