[package]
name = "pinxerit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
bytemuck = { version = "1.14.3", features = ["derive"] }
cgmath = "0.18.0"
env_logger = "0.11.2"
image = "0.24.9"
lyon = "1.0.1"
pollster = "0.3.0"
wgpu = "0.19.1"
winit = "0.29.10"
